--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,51 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainFragment"
     android:background="#2B1E28">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/search_layout"
-        android:paddingHorizontal="15dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/search_line"
         android:layout_marginTop="-100dp"
+        android:hint="@string/search_line"
+        android:paddingHorizontal="15dp"
         android:textColor="#fdfdfd"
         android:textColorHint="#6a6a6a"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/buttonSearch"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editText"
-            android:textColor="#fdfdfd"
-            android:textColorHint="#6a6a6a"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text=""
-            />
+            android:text="@={viewModel.searchString}"
+            android:textColor="#fdfdfd"
+            android:textColorHint="#6a6a6a"
+            android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:id="@+id/buttonSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:textSize="20sp"
-        android:textColor="#5e4602"
-        android:backgroundTint="#e2a600"
-        android:text="@string/btn_search"
-        app:layout_constraintBottom_toBottomOf="@id/search_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/search_layout"
-        app:layout_constraintTop_toTopOf="@id/search_layout"
-        android:enabled="false"
-        />
 
 
     <TextView
@@ -53,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
-        android:text="@string/search_result"
+        android:text="@{viewModel.state.result}"
         android:textColor="#fdfdfd"
         android:textColorHint="#6a6a6a"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,10 +62,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_view"
         android:layout_marginTop="50dp"
-        android:visibility="gone"
+        android:visibility="@{viewModel.state.Loading ? View.VISIBLE : View.GONE}"
         android:theme="@style/CircularProgress"
 
 
+
         />
+   
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+        <import type="android.view.View"/>
+        <import type="com.example.m12_mvvm.Search"/>
+        <import type="com.example.m12_mvvm.State"/>
+        <variable
+            name="viewModel"
+            type="com.example.m12_mvvm.MainViewModel" />
+    </data>
+    </layout>
